manifest/objects/DMMAX__Status__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__Age__c</fullName>
        <formula>TODAY() - DATEVALUE(DMMAX__FirstFire__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__AllowToShow__c</fullName>
        <formula>If (Blankvalue( DMMAX__Insight__r.DMMAX__Days_To_Show__c , 0) = 0, true, 
If (Blankvalue( DMMAX__Insight__r.DMMAX__Days_To_Show__c , 0) &gt;  (DMMAX__Age__c + 1) , true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AllowToShow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__FirstFire__c</fullName>
        <label>First Fire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMMAX__Insight__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Insight</label>
        <referenceTo>DMMAX__Insight__c</referenceTo>
        <relationshipLabel>Max Statuses</relationshipLabel>
        <relationshipName>Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__LastFire__c</fullName>
        <label>Last Fire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMMAX__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__OutOfScope__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If an insight goes out of scope for the rules we simply mark it so rather than removing it.</description>
        <label>Out Of Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__ProcessKey__c</fullName>
        <label>ProcessKey</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__RecordState__c</fullName>
        <label>RecordState</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Record__c</fullName>
        <label>Record</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Max Status</label>
    <nameField>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>